a few more endpoints and user projects and random stuff
